--- a/package.json
+++ b/package.json
@@ -34,8 +34,11 @@
     "query-string": "^4.3.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
-    "react-transition-group": "^2.0.2"
+    "react-transition-group": "^2.0.2",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
