--- a/.eslintrc
+++ b/.eslintrc
@@ -24,6 +24,13 @@
       "ignoreTemplateLiterals": true,
       "ignoreRegExpLiterals": true,
     }],
+    "jsx-a11y/label-has-for": [ 2, {
+            "components": [ "Label" ],
+            "required": {
+                "every": [ "id" ]
+            },
+            "allowChildren": false,
+        }],
     "jsx-a11y/anchor-is-valid": ["warn"],
     "jsx-a11y/click-events-have-key-events": ["warn"],
     "linebreak-style": ["error", "windows"],
