Changing one rule for the Eslint.

--- a/.eslintrc
+++ b/.eslintrc
@@ -16,7 +16,7 @@
     "no-plusplus": 0,
     "no-unused-vars": ["error", { "vars": "all", "args": "none", "ignoreRestSiblings": false }],
     "react/jsx-indent": [2, 2],
-    "curly": ["error", "multi"],
+    "curly": 0,
     # "array-callback-return": "warn",
     # "consistent-return": ["warn", { "treatUndefinedAsUnspecified": true }],
     "max-len": ["warn", 100, {
