--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "start": "webpack-dev-server --open",
     "build": "set NODE_ENV='production' & webpack -p",
     "deploy": "npm run build && firebase deploy",
-    "firebase-init": "firebase login && firebase init"
+    "firebase-init": "firebase login && firebase init",
+    "test": "jest",
+    "testCoverage": "jest --coverage"
   },
+  "jest": {
+  "setupFiles": [
+    "jest-localstorage-mock"
+  ]
+},
   "babel": {
     "presets": [
       "env",
@@ -39,8 +46,10 @@
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
+    "axios-mock-adapter": "^1.9.0",
     "babel-core": "^6.25.0",
     "babel-eslint": "^8.0.1",
+    "babel-jest": "^21.2.0",
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.6.0",
@@ -54,6 +63,9 @@
     "file-loader": "^0.11.2",
     "firebase-tools": "^3.9.1",
     "html-webpack-plugin": "^2.29.0",
+    "jest": "^21.2.1",
+    "jest-localstorage-mock": "^2.0.1",
+    "redux-mock-store": "^1.3.0",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
     "webpack": "^3.1.0",
