--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "testCoverage": "jest --coverage"
   },
   "jest": {
-  "setupFiles": [
-    "jest-localstorage-mock"
-  ]
-},
+    "setupFiles": [
+      "jest-localstorage-mock"
+    ]
+  },
   "babel": {
     "presets": [
       "env",
@@ -66,6 +66,7 @@
     "jest": "^21.2.1",
     "jest-localstorage-mock": "^2.0.1",
     "redux-mock-store": "^1.3.0",
+    "sinon": "^4.1.1",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
     "webpack": "^3.1.0",
