--- a/.eslintrc
+++ b/.eslintrc
@@ -17,6 +17,7 @@
     "no-unused-vars": ["error", { "vars": "all", "args": "none", "ignoreRestSiblings": false }],
     "react/jsx-indent": [2, 2],
     "curly": 0,
+    "import/no-named-as-default": 0,
     # "array-callback-return": "warn",
     # "consistent-return": ["warn", { "treatUndefinedAsUnspecified": true }],
     "max-len": ["warn", 100, {
