--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,16 @@
 {
-  "presets": ["env", "react"],
-  "plugins": ["transform-class-properties", "transform-object-rest-spread"]
+  "presets": [
+    ["env", {"modules": false}],
+    "react"
+  ],
+  "plugins": ["transform-class-properties", "transform-object-rest-spread", "react-hot-loader/babel"],
+  "env": {
+    "test": {
+      "presets": [
+        "env",
+        "react"
+      ],
+      "plugins": ["transform-class-properties", "transform-object-rest-spread"]
+    }
+  }
 }
