--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "query-string": "^4.3.4",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-hot-loader": "^3.1.3",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
