--- a/package.json
+++ b/package.json
@@ -79,6 +79,8 @@
     "redux-mock-store": "^1.3.0",
     "sinon": "^4.1.1",
     "style-loader": "^0.18.2",
+    "uglify-es": "^3.2.0",
+    "uglifyjs-webpack-plugin": "^1.0.0-rc.0",
     "url-loader": "^0.5.9",
     "webpack": "^3.1.0",
     "webpack-dev-server": "^2.5.1"
