--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "workbox-sw": "^2.1.2"
   },
   "devDependencies": {
     "axios-mock-adapter": "^1.9.0",
@@ -62,6 +63,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
+    "copy-webpack-plugin": "^4.2.3",
     "css-loader": "^0.28.4",
     "enzyme": "^3.1.1",
     "enzyme-adapter-react-16": "^1.0.4",
@@ -83,6 +85,7 @@
     "uglifyjs-webpack-plugin": "^1.0.0-rc.0",
     "url-loader": "^0.5.9",
     "webpack": "^3.1.0",
-    "webpack-dev-server": "^2.5.1"
+    "webpack-dev-server": "^2.5.1",
+    "workbox-webpack-plugin": "^2.1.2"
   }
 }
