--- a/app/pwa/manifest.json
+++ b/app/pwa/manifest.json
@@ -8,18 +8,33 @@
       "sizes": "48x48"
     },
     {
+      "src": "launcher-icon-1-5x.png",
+      "type": "image/png",
+      "sizes": "72x72"
+    },
+    {
       "src": "launcher-icon-2x.png",
       "type": "image/png",
       "sizes": "96x96"
     },
     {
+      "src":"launcher-icon-3x.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
       "src":"launcher-icon-4x.png",
       "sizes": "192x192",
       "type": "image/png"
+    },
+    {
+      "src":"launcher-icon-web.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ],
-  "start_url": "index.html/?utm_source=homescreen",
-  "background_color": "#5d4040",
+  "start_url": "reading/?utm_source=homescreen",
+  "background_color": "#FFFFFF",
   "theme_color": "#5d4040",
   "display": "standalone"
 }
