--- a/app/pwa/manifest.json
+++ b/app/pwa/manifest.json
@@ -36,5 +36,6 @@
   "start_url": "reading/?utm_source=homescreen",
   "background_color": "#FFFFFF",
   "theme_color": "#5d4040",
-  "display": "standalone"
+  "display": "standalone",
+  "gcm_sender_id": "103953800507"
 }
