--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "create": "webpack",
     "start": "webpack-dev-server --open",
-    "build": "set NODE_ENV='production' & webpack -p",
+    "build": "set NODE_ENV=production & webpack -p",
     "deploy": "npm run build && firebase deploy",
     "firebase-init": "firebase login && firebase init",
     "test": "jest",
@@ -75,6 +75,7 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^0.11.2",
     "firebase-tools": "^3.9.1",
     "html-webpack-plugin": "^2.29.0",
