--- a/package.json
+++ b/package.json
@@ -40,58 +40,58 @@
   },
   "homepage": "https://github.com/PengWang0316/ResonanceCode#readme",
   "dependencies": {
-    "axios": "^0.17.0",
+    "axios": "^0.17.1",
     "html2canvas": "^1.0.0-alpha.4",
     "jquery": "^3.2.1",
-    "prop-types": "^15.5.10",
-    "query-string": "^4.3.4",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-dropzone": "^4.2.3",
+    "prop-types": "^15.6.0",
+    "query-string": "^5.0.1",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-dropzone": "^4.2.5",
     "react-file-download": "^0.3.5",
     "react-hot-loader": "^3.1.3",
-    "react-redux": "^5.0.5",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "workbox-sw": "^2.1.2"
   },
   "devDependencies": {
-    "axios-mock-adapter": "^1.9.0",
-    "babel-core": "^6.25.0",
-    "babel-eslint": "^8.0.1",
-    "babel-jest": "^21.2.0",
-    "babel-loader": "^7.1.1",
+    "axios-mock-adapter": "^1.10.0",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.1",
+    "babel-jest": "^22.0.6",
+    "babel-loader": "^7.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "copy-webpack-plugin": "^4.2.3",
-    "css-loader": "^0.28.4",
-    "enzyme": "^3.1.1",
-    "enzyme-adapter-react-16": "^1.0.4",
-    "eslint": "^4.8.0",
-    "eslint-config-airbnb": "^16.0.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.4.0",
+    "copy-webpack-plugin": "^4.3.1",
+    "css-loader": "^0.28.8",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "eslint": "^4.15.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.5.1",
     "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^0.11.2",
-    "firebase-tools": "^3.9.1",
-    "google-closure-compiler-js": "^20171203.0.0",
-    "html-webpack-plugin": "^2.29.0",
-    "jest": "^21.2.1",
-    "jest-localstorage-mock": "^2.0.1",
+    "file-loader": "^1.1.6",
+    "firebase-tools": "^3.16.0",
+    "google-closure-compiler-js": "^20180101.0.0",
+    "html-webpack-plugin": "^2.30.1",
+    "jest": "^22.0.6",
+    "jest-localstorage-mock": "^2.1.0",
     "raf": "^3.4.0",
-    "redux-mock-store": "^1.3.0",
-    "sinon": "^4.1.1",
-    "style-loader": "^0.18.2",
-    "uglify-es": "^3.2.0",
-    "uglifyjs-webpack-plugin": "^1.0.0-rc.0",
-    "url-loader": "^0.5.9",
-    "webpack": "^3.1.0",
-    "webpack-bundle-analyzer": "^2.9.1",
-    "webpack-dev-server": "^2.5.1",
+    "redux-mock-store": "^1.4.0",
+    "sinon": "^4.1.5",
+    "style-loader": "^0.19.1",
+    "uglify-es": "^3.3.6",
+    "uglifyjs-webpack-plugin": "^1.1.6",
+    "url-loader": "^0.6.2",
+    "webpack": "^3.10.0",
+    "webpack-bundle-analyzer": "^2.9.2",
+    "webpack-dev-server": "^2.10.1",
     "workbox-webpack-plugin": "^2.1.2"
   }
 }
