--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "deploy": "npm run build && firebase deploy",
     "firebase-init": "firebase login && firebase init",
     "test": "jest",
-    "testCoverage": "jest --coverage"
+    "testCoverage": "jest --coverage",
+    "testWatch": "jest --watch"
   },
   "jest": {
     "moduleNameMapper": {
@@ -21,6 +22,10 @@
       "jest-localstorage-mock",
       "raf/polyfill",
       "<rootDir>/app/tools/setupTests.js"
+    ],
+    "coveragePathIgnorePatterns": [
+      "app/resources/",
+      "app/tools"
     ]
   },
   "babel": {
@@ -83,6 +88,7 @@
     "jest": "^22.0.6",
     "jest-localstorage-mock": "^2.1.0",
     "raf": "^3.4.0",
+    "react-test-renderer": "^16.2.0",
     "redux-mock-store": "^1.4.0",
     "sinon": "^4.1.5",
     "style-loader": "^0.19.1",
