--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "jest": {
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/app/tools/assetsTransformer.js",
-      "\\.(css|less)$": "<rootDir>/app/tools/assetsTransformer.js"
+      "\\.(css|less)$": "identity-obj-proxy"
     },
     "setupFiles": [
       "jest-localstorage-mock",
@@ -85,6 +85,7 @@
     "firebase-tools": "^3.16.0",
     "google-closure-compiler-js": "^20180101.0.0",
     "html-webpack-plugin": "^2.30.1",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^22.0.6",
     "jest-localstorage-mock": "^2.1.0",
     "raf": "^3.4.0",
