--- a/.babelrc
+++ b/.babelrc
@@ -3,14 +3,15 @@
     ["env", {"modules": false}],
     "react"
   ],
-  "plugins": ["transform-class-properties", "transform-object-rest-spread", "react-hot-loader/babel"],
+  "plugins": ["transform-class-properties", "transform-object-rest-spread", "react-hot-loader/babel", "syntax-dynamic-import", "dynamic-import-webpack"],
   "env": {
     "test": {
       "presets": [
         "env",
         "react"
       ],
-      "plugins": ["transform-class-properties", "transform-object-rest-spread"]
+      "plugins": ["transform-class-properties", "transform-object-rest-spread", "dynamic-import-webpack"]
     }
-  }
+  },
+  "comments": true
 }
