--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "presets": [
       "env",
       "react"
-    ]
+    ],
+    "comments": true
   },
   "repository": {
     "type": "git",
@@ -55,6 +56,7 @@
     "react-dropzone": "^4.2.5",
     "react-file-download": "^0.3.5",
     "react-hot-loader": "^3.1.3",
+    "react-loadable": "^5.3.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
@@ -67,6 +69,8 @@
     "babel-eslint": "^8.2.1",
     "babel-jest": "^22.0.6",
     "babel-loader": "^7.1.2",
+    "babel-plugin-dynamic-import-webpack": "^1.0.2",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
