--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "react-dropzone": "^4.2.8",
     "react-file-download": "^0.3.5",
     "react-hot-loader": "^3.1.3",
-    "react-loadable": "^5.3.1",
+    "react-imported-component": "^2.0.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
