--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "create": "webpack",
-    "start": "webpack-dev-server --open",
-    "build": "set NODE_ENV=production & webpack -p",
+    "start": "webpack-dev-server --mode development --open",
+    "build": "set NODE_ENV=production & webpack --mode production -p",
     "deploy": "npm run build && firebase deploy",
     "firebase-init": "firebase login && firebase init",
     "test": "jest",
@@ -55,13 +55,13 @@
     "react-dom": "^16.2.0",
     "react-dropzone": "^4.2.9",
     "react-file-download": "^0.3.5",
-    "react-hot-loader": "^3.1.3",
+    "react-hot-loader": "^4.0.0",
     "react-imported-component": "^2.0.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "workbox-sw": "^2.1.3"
+    "workbox-sw": "^3.0.0"
   },
   "devDependencies": {
     "axios-mock-adapter": "^1.14.1",
@@ -88,21 +88,23 @@
     "file-loader": "^1.1.11",
     "firebase-tools": "^3.17.7",
     "google-closure-compiler-js": "^20180101.0.0",
-    "html-webpack-plugin": "^2.30.1",
+    "html-webpack-plugin": "^3.0.7",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^22.4.2",
     "jest-localstorage-mock": "^2.2.0",
+    "mini-css-extract-plugin": "^0.2.0",
     "raf": "^3.4.0",
     "react-test-renderer": "^16.2.0",
     "redux-mock-store": "^1.5.1",
     "sinon": "^4.4.6",
-    "style-loader": "^0.19.1",
-    "uglify-es": "^3.3.10",
+    "style-loader": "^0.20.3",
+    "uglify-es": "^3.3.9",
     "uglifyjs-webpack-plugin": "^1.2.4",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.11.0",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.2.0",
     "webpack-bundle-analyzer": "^2.11.1",
-    "webpack-dev-server": "^2.11.2",
-    "workbox-webpack-plugin": "^2.1.3"
+    "webpack-cli": "^2.0.12",
+    "webpack-dev-server": "^3.1.1",
+    "workbox-webpack-plugin": "^3.0.0"
   }
 }
