--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "create": "webpack",
-    "start": "webpack-dev-server --open",
-    "build": "set NODE_ENV=production & webpack -p",
+    "start": "webpack-dev-server --mode development --open",
+    "build": "set NODE_ENV=production & webpack --mode production -p",
     "deploy": "npm run build && firebase deploy",
     "firebase-init": "firebase login && firebase init",
     "test": "jest",
@@ -45,64 +45,66 @@
   },
   "homepage": "https://github.com/PengWang0316/ResonanceCode#readme",
   "dependencies": {
-    "axios": "^0.17.1",
+    "axios": "^0.18.0",
     "date-format-lib": "0.0.4",
     "html2canvas": "^1.0.0-alpha.10",
-    "jquery": "^3.2.1",
-    "prop-types": "^15.6.0",
-    "query-string": "^5.1.0",
+    "jquery": "^3.3.1",
+    "prop-types": "^15.6.1",
+    "query-string": "^6.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-dropzone": "^4.2.8",
+    "react-dropzone": "^4.2.9",
     "react-file-download": "^0.3.5",
-    "react-hot-loader": "^3.1.3",
+    "react-hot-loader": "^4.0.0",
     "react-imported-component": "^2.0.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "workbox-sw": "^2.1.2"
+    "workbox-sw": "^3.0.1"
   },
   "devDependencies": {
-    "axios-mock-adapter": "^1.10.0",
+    "axios-mock-adapter": "^1.14.1",
     "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.1",
-    "babel-jest": "^22.4.0",
-    "babel-loader": "^7.1.2",
+    "babel-eslint": "^8.2.2",
+    "babel-jest": "^22.4.3",
+    "babel-loader": "^7.1.4",
     "babel-plugin-dynamic-import-webpack": "^1.0.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "copy-webpack-plugin": "^4.3.1",
-    "css-loader": "^0.28.9",
+    "copy-webpack-plugin": "^4.5.1",
+    "css-loader": "^0.28.11",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "eslint": "^4.18.1",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
     "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.8",
-    "firebase-tools": "^3.16.0",
+    "file-loader": "^1.1.11",
+    "firebase-tools": "^3.17.7",
     "google-closure-compiler-js": "^20180101.0.0",
-    "html-webpack-plugin": "^2.30.1",
+    "html-webpack-plugin": "^3.1.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^22.4.0",
+    "jest": "^22.4.3",
     "jest-localstorage-mock": "^2.2.0",
+    "mini-css-extract-plugin": "^0.2.0",
     "raf": "^3.4.0",
     "react-test-renderer": "^16.2.0",
     "redux-mock-store": "^1.5.1",
-    "sinon": "^4.3.0",
-    "style-loader": "^0.19.1",
+    "sinon": "^4.4.8",
+    "style-loader": "^0.20.3",
     "uglify-es": "^3.3.10",
-    "uglifyjs-webpack-plugin": "^1.2.0",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.11.0",
-    "webpack-bundle-analyzer": "^2.10.0",
-    "webpack-dev-server": "^2.11.1",
-    "workbox-webpack-plugin": "^2.1.2"
+    "uglifyjs-webpack-plugin": "^1.2.4",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.2.0",
+    "webpack-bundle-analyzer": "^2.11.1",
+    "webpack-cli": "^2.0.13",
+    "webpack-dev-server": "^3.1.1",
+    "workbox-webpack-plugin": "^3.0.1"
   }
 }
