--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "firebase-init": "firebase login && firebase init",
     "test": "jest",
     "testCoverage": "jest --coverage",
-    "testWatch": "jest --watch"
+    "testWatch": "jest --watch",
+    "coveralls": "cat ./coverage/lcov.info | node node_modules/.bin/coveralls"
   },
   "jest": {
     "moduleNameMapper": {
