--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,7 @@
     ["env", {"modules": false}],
     "react"
   ],
-  "plugins": ["transform-class-properties", "transform-object-rest-spread", "react-hot-loader/babel", "syntax-dynamic-import", "dynamic-import-webpack", "react-imported-component/babel"],
+  "plugins": ["transform-class-properties", "transform-object-rest-spread", "react-hot-loader/babel", "syntax-dynamic-import", "react-imported-component/babel"],
   "env": {
     "test": {
       "presets": [
