--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
       "\\.(css|less)$": "identity-obj-proxy"
     },
     "setupFiles": [
-      "jest-localstorage-mock",
       "raf/polyfill",
       "<rootDir>/app/tools/setupTests.js"
     ],
     "coveragePathIgnorePatterns": [
       "app/resources/",
       "app/tools"
-    ]
+    ],
+    "testURL": "http://localhost",
+    "verbose": true
   },
   "babel": {
     "presets": [
@@ -50,63 +51,62 @@
     "date-format-lib": "0.0.6",
     "html2canvas": "^1.0.0-alpha.12",
     "jquery": "^3.3.1",
-    "prop-types": "^15.6.1",
+    "prop-types": "^15.6.2",
     "query-string": "^6.1.0",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
-    "react-dropzone": "^4.2.9",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
+    "react-dropzone": "^4.3.0",
     "react-file-download": "^0.3.5",
-    "react-hot-loader": "^4.1.3",
-    "react-imported-component": "^4.4.0",
+    "react-hot-loader": "^4.3.4",
+    "react-imported-component": "^4.6.2",
     "react-redux": "^5.0.7",
-    "react-router-dom": "^4.2.2",
+    "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.2.0",
-    "workbox-sw": "^3.2.0"
+    "redux-thunk": "^2.3.0",
+    "workbox-sw": "^3.4.1"
   },
   "devDependencies": {
     "axios-mock-adapter": "^1.15.0",
     "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.3",
-    "babel-jest": "^22.4.3",
-    "babel-loader": "^7.1.4",
+    "babel-eslint": "^8.2.6",
+    "babel-jest": "^22.4.4",
+    "babel-loader": "^7.1.5",
     "babel-plugin-dynamic-import-webpack": "^1.0.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "copy-webpack-plugin": "^4.5.1",
-    "coveralls": "^3.0.1",
+    "copy-webpack-plugin": "^4.5.2",
+    "coveralls": "^3.0.2",
     "css-loader": "^0.28.11",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme": "^3.4.1",
+    "enzyme-adapter-react-16": "^1.2.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.11.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.8.2",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.10.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
-    "firebase-tools": "^3.18.4",
+    "firebase-tools": "^3.19.3",
     "google-closure-compiler-js": "^20180101.0.0",
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^22.4.3",
-    "jest-localstorage-mock": "^2.2.0",
-    "mini-css-extract-plugin": "^0.4.0",
+    "jest": "^22.4.4",
+    "mini-css-extract-plugin": "^0.4.1",
     "raf": "^3.4.0",
-    "react-test-renderer": "^16.3.2",
-    "redux-mock-store": "^1.5.1",
-    "sinon": "^5.0.7",
+    "react-test-renderer": "^16.4.2",
+    "redux-mock-store": "^1.5.3",
+    "sinon": "^5.1.1",
     "style-loader": "^0.21.0",
     "uglify-es": "^3.3.10",
-    "uglifyjs-webpack-plugin": "^1.2.5",
+    "uglifyjs-webpack-plugin": "^1.2.7",
     "url-loader": "^1.0.1",
-    "webpack": "^4.8.3",
-    "webpack-bundle-analyzer": "^2.12.0",
-    "webpack-cli": "^2.1.3",
-    "webpack-dev-server": "^3.1.4",
-    "workbox-webpack-plugin": "^3.2.0"
+    "webpack": "^4.16.5",
+    "webpack-bundle-analyzer": "^2.13.1",
+    "webpack-cli": "^2.1.5",
+    "webpack-dev-server": "^3.1.5",
+    "workbox-webpack-plugin": "^3.4.1"
   }
 }
