--- a/.babelrc
+++ b/.babelrc
@@ -1,16 +1,16 @@
 {
   "presets": [
-    ["env", {"modules": false}],
-    "react"
+    ["@babel/preset-env", {"modules": false}],
+    "@babel/preset-react"
   ],
-  "plugins": ["transform-class-properties", "transform-object-rest-spread", "react-hot-loader/babel", "syntax-dynamic-import", "react-imported-component/babel"],
+  "plugins": ["transform-class-properties", "@babel/plugin-proposal-object-rest-spread", "react-hot-loader/babel", "syntax-dynamic-import", "react-imported-component/babel", "@babel/transform-runtime"],
   "env": {
     "test": {
       "presets": [
-        "env",
-        "react"
+        "@babel/preset-env",
+        "@babel/preset-react"
       ],
-      "plugins": ["transform-class-properties", "transform-object-rest-spread", "dynamic-import-webpack"]
+      "plugins": ["transform-class-properties", "@babel/plugin-proposal-object-rest-spread", "dynamic-import-webpack"]
     }
   }
 }
