--- a/package.json
+++ b/package.json
@@ -30,12 +30,6 @@
     "testURL": "http://localhost",
     "verbose": true
   },
-  "babel": {
-    "presets": [
-      "env",
-      "react"
-    ]
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/PengWang0316/ResonanceCode.git"
@@ -66,8 +60,14 @@
     "workbox-sw": "^3.6.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
+    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/runtime": "^7.4.5",
     "axios-mock-adapter": "^1.15.0",
-    "babel-core": "^6.26.3",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.8.0",
     "babel-loader": "^7.1.5",
@@ -75,8 +75,6 @@
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
     "copy-webpack-plugin": "^4.6.0",
     "coveralls": "^3.0.2",
     "css-loader": "^1.0.1",
